--- a/src/VirtoCommerce.Platform.Web/appsettings.json
+++ b/src/VirtoCommerce.Platform.Web/appsettings.json
@@ -1,8 +1,8 @@
 {
   // Supported Values: SqlServer (default), MySql, PostgreSql
-  "DatabaseProvider": "SqlServer",
+  "DatabaseProvider": "MySql",
   "ConnectionStrings": {
-    "VirtoCommerce": "Data Source=(local);Initial Catalog=VirtoCommerce3;Persist Security Info=True;User ID=virto;Password=virto;Connect Timeout=30"
+  "VirtoCommerce": "server=localhost;user=root;password=virto;database=VirtoCommerce3;"
     //"RedisConnectionString": "127.0.0.1:6379,ssl=False"
   },
   "Logging": {
@@ -88,7 +88,7 @@
     "Provider": "FileSystem",
     "FileSystem": {
       "RootPath": "~/assets",
-      "PublicUrl": "https://localhost:5001/assets/"
+      "PublicUrl": "https://localhost:44377/assets/"
     },
     "AzureBlobStorage": {
       "ConnectionString": "",
@@ -125,8 +125,10 @@
   },
   "ExternalModules": {
     "IncludePrerelease": false,
-    "ModulesManifestUrl": "https://raw.githubusercontent.com/VirtoCommerce/vc-modules/master/modules_v3.json",
+    "ModulesManifestUrl": "https://git.rntgroup.com/api/v4/projects/RNTG-RBVC%2FVirtoCommerce/repository/files/modules_v3.json/raw",
     "AuthorizationToken": "",
+    "AuthorizationSchema": "Bearer",
+    "AuthorizationParameter": "Your token",
     "AutoInstallModuleBundles": [
       "commerce"
     ]
@@ -134,6 +136,7 @@
   "Search": {
     "Provider": "Lucene",
     "Scope": "default",
+    "OrderFullTextSearchEnabled": true,
     "Lucene": {
       "Path": "app_data/lucene"
     },
@@ -152,7 +155,7 @@
     "Provider": "FileSystem",
     "FileSystem": {
       "RootPath": "~/cms-content",
-      "PublicUrl": "https://localhost:5001/cms-content/"
+      "PublicUrl": "https://localhost:44377/cms-content/"
     },
     "AzureBlobStorage": {
       "ConnectionString": "",
@@ -164,6 +167,11 @@
     "RefreshTokenLifeTime": "30.00:00:00",
     "AccessTokenLifeTime": "00:30:00",
     "LimitedCookiePermissions": "platform:asset:read;platform:export;content:read;platform:asset:create;licensing:issue;export:download"
+  },
+  "OpenIdConnect": {
+    "ClientId": "65d3db22-83b9-403b-bd3f-857596ebeb42",
+    "MetadataAddress": "https://login.rntgroup.su/adfs/.well-known/openid-configuration",
+    "Authority": "https://localhost:44377"
   },
   "AzureAd": {
     "Enabled": false,
@@ -195,7 +203,7 @@
     "ScalabilityMode": "None",
     //The URL is used to connect the platform SignalR /pushNotificationHub hub as client to be able sync the local notifications storage with notifications that are produced by other platform instances
     //Need to specify a full URL to  /pushNotificationHub e.g https://your-app-name.azurewebsites.net/pushNotificationHub
-    "HubUrl": "https://localhost:5001/pushNotificationHub",
+    "HubUrl": "https://localhost:44377/pushNotificationHub",
     //Force use WebSockets for notification exchange. Host environment should allow to use WebSockets.
     //For Azure AppService configuration: switch 'Web sockets' to 'On'. 'ARR affinity': 'Off'
     "ForceWebSockets": false,
