feat: add OrganizationMaintainerRole default

--- a/src/VirtoCommerce.Platform.Web/appsettings.json
+++ b/src/VirtoCommerce.Platform.Web/appsettings.json
@@ -230,5 +230,8 @@
         "PatternUrl": "/images/pattern-live.svg"
       }
     ]
+  },
+  "FrontendSecurity": {
+    "OrganizationMaintainerRole": "Organization maintainer"
   }
 }
